--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
         #downloadImage {
             max-width: 100%;
             height: 100%;
-		object-fit: cover;
-		position: absolute;
-		top:0;
-		button:0;
+	    width: auto; /* Maintain aspect ratio */
+            height: auto;	
         }
     </style>
 </head>
