--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         #downloadImage {
             max-width: 100%;
-            height: 100%;
+            max-height: 100%;
 	    width: auto; /* Maintain aspect ratio */
             height: auto;	
         }
