--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         #downloadImage {
             max-width: 100%;
             max-height: 100%;
-	    width: auto; /* Maintain aspect ratio */
-            height: auto;	
+	    width: 1000px; /* Maintain aspect ratio */
+            height: 1000px;	
         }
     </style>
 </head>
