--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
 
         #downloadImage {
+	    max-width:100%;
 	    width: 700px; /* Maintain aspect ratio */
             height: 700px;	
         }
