--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1080"> <!-- Set the viewport width to 1080 pixels -->
     <meta name="description" content="Image Download">
     <title>Saini</title>
     <style>
@@ -16,9 +16,8 @@
         }
 
         #downloadImage {
-	    max-width:100%;
-	    width: 700px; /* Maintain aspect ratio */
-            height: 700px;	
+	    width: 1000px; /* Maintain aspect ratio */
+            height: 1000px;	
         }
     </style>
 </head>
